core, fixes select2 dropdown z-index

--- a/www/css/less/forms/base.less
+++ b/www/css/less/forms/base.less
@@ -198,7 +198,7 @@
 	}
 }
 
-.select2-container { z-index: 90010; }
+.popup-container-visible .select2-container { z-index: 99000; }
 
 
 .handler-sortable {
